--- a/src/containers/App/App.module.css
+++ b/src/containers/App/App.module.css
@@ -1,8 +1,18 @@
+html {
+    overflow-x: hidden;
+}
+
 .main {
     display: flex;
     flex-direction: column;
 }
 
 .baner {
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
     width: 100%;
 }
